--- a/Cronômetro/cronometro.html
+++ b/Cronômetro/cronometro.html
@@ -61,7 +61,21 @@
 	        cursor:pointer;
 	        border: 1px solid #111;
 		
-        } 
+        }
+		
+		#bot_azul:hover{
+		
+		    background: #222222;
+		
+		}
+		
+		#bot_azul:active{
+		
+		    background: #555555;
+		
+		}
+        
+        		
   
         #bot_vermelho{
   
@@ -78,6 +92,18 @@
 	        border: 1px solid #111;
 		
         }
+		
+		#bot_vermelho:hover{
+		
+		    background: #222222;
+		
+		}
+		
+		#bot_vermelho:active{
+		
+		    background: #555555;
+		
+		}
   
         #bot_cinza{
 	
@@ -94,6 +120,18 @@
 	        border: 1px solid #111;
 	  
         }
+		
+		#bot_cinza:hover{
+		
+		    background: #222222;
+		
+		}
+		
+		#bot_cinza:active{
+		
+		    background: #555555;
+		
+		}
   
         .bot_numeros{
 	
@@ -108,14 +146,28 @@
 	        border-radius: 3px;
 	        cursor: pointer;	
 	        border: 1px solid #111;
-    }
-  
-    #campo_cronometro{
-	
-        font-size:40px;
-		color:#cc0000;
+        }
 		
-    }
+		.bot_numeros:hover{
+		
+		    background: #222222;
+			color:#f2f2f2;
+		
+		}
+		
+		.bot_numeros:active{
+		
+		    background: #555555;
+			color:#f2f2f2;
+		
+		}
+  
+        #campo_cronometro{
+	
+            font-size:40px;
+		    color:#cc0000;
+		
+        }
    
 	  
     </style>
